--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,9 +8,11 @@
         </p>
 
         <ul>
-            <li>Single and multiple selection.</li>
-            <li>Search</li>
             <li>Simple to use.</li>
+            <li>Look native in bootstrap 4.</li>
+            <li>Be flexible enough to allow custom items.</li>
+            <li>Single and multiple selection.</li>
+            <li>Live search</li>
         </ul>
 
         <p>
